Fix Scrolling on mobile

--- a/css/mq.css
+++ b/css/mq.css
@@ -1,5 +1,6 @@
 @media(max-width:780px) {
-    body{
+    body,
+    html{
         height: 100vh;
     }
     .canvas-container {
@@ -17,6 +18,12 @@
         
         grid-template-columns: 1fr 1fr;
     
+    }
+    .gallery-container{
+        height: fit-content;
+    }
+    .scroll-container {
+        overflow: hidden; /* Hides both horizontal and vertical scrollbars */
     }
     
 }
