--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
     background-position: center;
 
     background-repeat: no-repeat;
+    
+}
+
+body,
+html {
     height: 100vh;
 }
 
@@ -50,21 +55,22 @@ body {
 
 .srch-gallery {
     height: 60px;
-    
+
     border-radius: 500px;
     background-color: rgba(33.999481201171875, 37.003326416015625, 43.99932861328125, 1);
     font-family: poppins-light;
     font-size: 1.3125rem;
     color: rgba(255, 255, 255, 0.743);
     padding-left: 40px;
-    
+
 }
 
-.righSide-srch{
+.righSide-srch {
     display: flex;
     place-items: center;
     gap: 30px;
 }
+
 .freq-search {
     background-color: gray;
     border-radius: 500px;
@@ -74,7 +80,7 @@ body {
     box-shadow: 2px 2px 2px 2px rgb(13, 1, 1);
 }
 
-.more-btn{
+.more-btn {
     width: 95px;
     height: 40px;
     border-radius: 100px;
@@ -85,36 +91,38 @@ body {
     box-shadow: 2px 2px 2px 2px rgb(13, 1, 1);
 }
 
-.scroll-container{
-    width: fit-content;          
-    height: fit-content;          
-    overflow-y: scroll;;     
-    
-    padding: 10px;  
+.scroll-container {
+    width: fit-content;
+    height: fit-content;
+    overflow-y: scroll;
+    ;
+
+    padding: 10px;
 }
+
 ::-webkit-scrollbar {
-    width: 12px; 
+    width: 12px;
     height: 12px;
 }
 
 
 ::-webkit-scrollbar-track {
-    background: #2a2828; 
-    border-radius: 10px; 
+    background: #2a2828;
+    border-radius: 10px;
 }
 
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(to right, #3d92b9, #37cd84); 
-    border-radius: 10px; 
-    transition: background-color 0.3s ease; 
+    background: linear-gradient(to right, #3d92b9, #37cd84);
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
     transition: linear-gradient 1s;
 }
 
 
 ::-webkit-scrollbar-thumb:hover {
     background: linear-gradient(to left, #3d92b9, #37cd84);
-    
+
 }
 
 
@@ -137,7 +145,7 @@ body {
 }
 
 .paint-options {
-   
+
     background-color: rgb(66, 75, 75);
     border-radius: 20px;
     border: 5px solid rgb(64, 64, 64);
